--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ body {
     font-family: 'Poppins', sans-serif;
     line-height: 1.8;
     color: #999
+    background-color: #131313;
 }
 
 .no-padding {
