--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,8 @@ body {
     height: 100%;
     font-family: 'Poppins', sans-serif;
     line-height: 1.8;
-    color: #999
-    background-color: #131313;
+    color: #f9f9f9;
+    background-color: #0b0b0b !important;
 }
 
 .no-padding {
